# solana-credit-score

./: Cargo.toml  README.md  fetch-release.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs
